--- a/main.yml
+++ b/main.yml
@@ -1,14 +1,35 @@
 ---
 - name: Install Zabbix agent
   hosts: all
-#  tasks:
-#    - name: Install epel repo
-#      package: name=epel-release state=installed
-#      when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  vars:
+    repo_centos7: "http://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-release-3.0-1.el7.noarch.rpm"
+    repo_centos6: "http://repo.zabbix.com/zabbix/3.2/rhel/6/x86_64/zabbix-agent-3.2.1-1.el6.x86_64.rpm"
+  tasks:
+    - include: centos.yml
+      when: ansible_distribution == 'CentOS'
 
-#    - name:
-- include: centos.yml
-  when: ansible_distribution == 'CentOS'
+    - include: ubuntu.yml
+      when: ansible_distribution == 'Ubuntu'
 
-- include: ubuntu.yml
-  when: ansible_distribution == 'Ubuntu'
+
+    - name: Copy zabbix-agent config file
+      template: src=files/zabbix_agentd.conf.j2 dest=/etc/zabbix/zabbix_agentd.conf
+
+
+    - name: change add direcories for zabbix
+      file:
+      path: /usr/local/zabbix
+      state: directory
+      owner: zabbix
+      group: zabbix
+      mode: 0755
+
+  #- meta: flush_handlers
+
+  #- name: Ensure zabbix-agent is started and enabled
+  #  service: name=zabbix-agent state=started enabled=yes
+
+
+#handlers:
+#  - name: Restart zabbix
+#    service: name=zabbix-agent state=restarted
