--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 inventory = inventory
 remote_user = root
 roles_path = roles
-private_key_file = /root/.ssh/id_rsa
+private_key_file = /Users/slevincalebra/.ssh/id_rsa
 host_key_checking = False
