--- a/main.yml
+++ b/main.yml
@@ -4,6 +4,10 @@
   vars:
     repo_centos7: "http://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-release-3.0-1.el7.noarch.rpm"
     repo_centos6: "http://repo.zabbix.com/zabbix/3.2/rhel/6/x86_64/zabbix-agent-3.2.1-1.el6.x86_64.rpm"
+    repo_ubuntu_16: "http://repo.zabbix.com/zabbix/3.0/ubuntu/pool/main/z/zabbix/zabbix-agent_3.0.3-2+xenial_amd64.deb"
+    repo_ubuntu_14: "hello-world"
+
+
   tasks:
     - include: centos.yml
       when: ansible_distribution == 'CentOS'
@@ -18,11 +22,11 @@
 
     - name: change add direcories for zabbix
       file:
-      path: /usr/local/zabbix
-      state: directory
-      owner: zabbix
-      group: zabbix
-      mode: 0755
+        path: /usr/local/zabbix
+        state: directory
+        owner: zabbix
+        group: zabbix
+        mode: 0755
 
   #- meta: flush_handlers
 
