--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -1,10 +1,11 @@
 ---
-- name: Install zabbix agent on Ubuntu
-  gather_facts: no
-  pre_tasks:
-    - raw: sudo apt-get -y install python-simplejson
+- raw: sudo apt-get -y install python-simplejson
+- name: Install a .deb package from the internet for ubuntu 16.
+  apt:
+    deb: "{{repo_ubuntu_16}}"
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version == "16"
 
-  tasks:
-    - name: Install a .deb package from the internet.
-      apt:
-        deb: http://repo.zabbix.com/zabbix/3.0/ubuntu/pool/main/z/zabbix/zabbix-agent_3.0.3-2+xenial_amd64.deb
+- name: Install a deb package Ubuntu 14
+  apt:
+    deb: "{{repo_ubuntu_14}}"
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version == "14"
