--- a/main.yml
+++ b/main.yml
@@ -2,8 +2,8 @@
 - name: Install Zabbix agent
   hosts: all
   vars:
-    repo_centos7: "http://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-agent-3.0.0-1.el7.x86_64.rpm"
-    repo_centos6: "http://repo.zabbix.com/zabbix/3.2/rhel/6/x86_64/zabbix-agent-3.2.1-1.el6.x86_64.rpm"
+    repo_centos_7: "http://repo.zabbix.com/zabbix/3.0/rhel/7/x86_64/zabbix-agent-3.0.0-1.el7.x86_64.rpm"
+    repo_centos_76: "http://repo.zabbix.com/zabbix/3.2/rhel/6/x86_64/zabbix-agent-3.2.1-1.el6.x86_64.rpm"
     repo_ubuntu_16: "http://repo.zabbix.com/zabbix/3.0/ubuntu/pool/main/z/zabbix/zabbix-agent_3.0.3-2+xenial_amd64.deb"
     repo_ubuntu_14: "http://repo.zabbix.com/zabbix/3.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_3.0-1+trusty_all.deb"
 
@@ -15,7 +15,7 @@
     - include: ubuntu.yml
       when: ansible_distribution == 'Ubuntu'
 
-    - name: change add direcories for zabbix
+    - name: add direcories for zabbix
       file:
         path: /usr/local/zabbix
         state: directory
